(Mostly) Fix scroll bounce on iOS
If you scroll really fast it can still sometimes bounce the view, but it's much less noticeable now.

--- a/index.less
+++ b/index.less
@@ -33,6 +33,9 @@ body {
 	
 	text-shadow: @textglow @maincolor;
 	
+	// fix scroll bounce on iOS
+	-webkit-overflow-scrolling: auto;
+	
 	display: flex;
 	flex-direction: column;
 	align-items: stretch;
@@ -43,6 +46,9 @@ body {
 		
 		margin: 0;
 		padding: 16px;
+		
+		// we do want scroll bounce on this
+		-webkit-overflow-scrolling: touch;
 	}
 }
 // @media (prefers-color-scheme: dark) {
